--- a/user_examples.html
+++ b/user_examples.html
@@ -468,13 +468,13 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-advanced" href="#collapse-advanced-1">
-                        Performs pixel area classification (background or object) with a WEKA classifier trained on regions selected by the user.
+                        Pixel classification
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-advanced-1" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <p></p>
+                      <p>Performs pixel area classification (background or object) with a WEKA classifier trained on regions selected by the user.</p>
                       <img src="img/examples/pixel-selector.png"/>
                       <ol>
                         <li>Parameter initialization</li>
@@ -501,13 +501,13 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-advanced" href="#collapse-advanced-2">
-                        Using the GC-MS extension modules, this flow performs a check on the sample type of GC-MS spectra and can send the analyst an email with the results. The spectra themselves are obtained from fruit and vegetable samples.
+                        Sample type checker
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-advanced-2" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <p></p>
+                      <p>Using the GC-MS extension modules, this flow performs a check on the sample type of GC-MS spectra and can send the analyst an email with the results. The spectra themselves are obtained from fruit and vegetable samples.</p>
                       <img src="img/examples/sampletypechecker.png"/>
                       <ol>
                         <li>Retrieve classification available classification labels</li>
@@ -531,13 +531,13 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-advanced" href="#collapse-advanced-3">
-                        Using GC-MS extension modules, this flow processes spectral data generating predictions for compounds. The user can correct the guessed peaks interactively, before the concentrations are calculated.
+                        Spectral analysis
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-advanced-3" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <p></p>
+                      <p>Using GC-MS extension modules, this flow processes spectral data generating predictions for compounds. The user can correct the guessed peaks interactively, before the concentrations are calculated.</p>
                       <img src="img/examples/spectralanalysis.png"/>
                       <ol>
                         <li>Set up external flows, relative to current one</li>
