--- a/navbar.html
+++ b/navbar.html
@@ -40,6 +40,7 @@
                 <li><a href="features.html">Features</a></li>
                 <li><a href="screenshots.html">Screenshots</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li><a href="consulting.html">Consulting</a></li>
               </ul>
             </li>
