--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="col-md-4">
           <h2>About</h2>
           <p>ADAMS offers a wide range of operators (called <em>actors</em>) that perform retrieval, processsing, mining and visualization of data. Instead of placing actors on a canvas and connecting them manually, actors connect implicitly in a tree structure instead.</p>
-          <p><a class="btn btn-default" href="features.html" role="button">Features »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="screenshots.html" role="button">Screenshots »</a></p>
+          <p><a class="btn btn-default" href="about.html" role="button">More »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="screenshots.html" role="button">Screenshots »</a></p>
         </div>
         <!-- Download -->
         <div class="col-md-4">
