--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- Download -->
         <div class="col-md-4">
           <h2>Download</h2>
-          <p>Written in Java, ADAMS runs on any platform that supports <a href="http://www.oracle.com/technetwork/java/javase/" target="_blank">Java 1.7+</a>. Download, unzip and off you go! You can either download a <strong>release</strong> (usually considered stable) or a <strong>snapshot</strong> (if you want to get the latest updates).</p>
+          <p>Written in Java, ADAMS runs on any platform that supports <a href="http://www.oracle.com/technetwork/java/javase/" target="_blank">Java 1.7+</a>, preferably 64-bit. Download, unzip and off you go! You can either download a <strong>release</strong> (usually considered stable) or a <strong>snapshot</strong> (if you want to get the latest updates).</p>
           <p><a class="btn btn-default" href="release.html" role="button">Release »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="snapshot.html" role="button">Snapshot »</a></p>
         </div>
         <!-- Get started -->
