--- a/user_start.html
+++ b/user_start.html
@@ -37,9 +37,134 @@
         <h1>Get started (User)</h1>
       </div>
 
-      <div id="footer">
+      <div class="panel-group" id="accordion-user">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion-user" href="#collapse-user-4">
+                First steps
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-user-4" class="panel-collapse collapse">
+            <div class="panel-body">
+              <p>Check out the manual <code>adams-core-manual.pdf</code> that comes with ADAMS:</p>
+              <p><em>Using ADAMS &#9654; Flows &#9654; Creating flows</em></p>
+              <p>This section discusses how to create your first <em>Hello World!</em> flows.</p>
+              <p>The first part of the manual, <em>Using ADAMS</em>, covers most of the core functionality of ADAMS, like control actors, variables, storage, debugging, etc.</p>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion-user" href="#collapse-user-1">
+              Prototyping
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-user-1" class="panel-collapse collapse">
+            <div class="panel-body">
+              <p>ADAMS strives to enable you to quickly set up and modify complex workflows, allowing you to concentrate on the functionality rather than the presentation.</p>
+
+              <div class="panel-group" id="accordion-prototyping">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion-prototyping" href="#collapse-prototyping-1">
+                        Drag'n'drop of actors
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse-prototyping-1" class="panel-collapse collapse">
+                    <div class="panel-body">
+                      <p>Using drag'n'drop you can quickly assemble a flow:</p>
+                      <p><img src="img/examples/dragndrop-example1.png" /></p>
+                      <p>Dragging the <em>StringConstants</em> source onto the flow.</p>
+                      <p><img src="img/examples/dragndrop-example2.png" /></p>
+                      <p>Specifying how to insert the <em>StringConstants</em> source into the flow.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion-prototyping" href="#collapse-prototyping-2">
+                        Context-sensitive adding of actors
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse-prototyping-2" class="panel-collapse collapse">
+                    <div class="panel-body">
+                      <p>Instead of adding actors by dragging them from the library of available ones, you can use ADAMS' context-awareness when adding actors via right-clicking on an actor and adding it <em>beneath</em>, <em>here</em> or <em>after</em>:</p>
+                      <p><img src="img/examples/actorsuggestions-combobox.png" /></p>
+                      <p>You can always bring up the complete range of possible actors by clicking on the <strong>class tree</strong> button. The popup allows you to perform a search within the (class) names of the actors. While typing the search string the view gets updated and only the actors that match the search string are being displayed.</p>
+                      <p><img src="img/examples/actorsuggestions-search.png" /></p>
+                      <p>For now we settle on using the <em>FileSupplier</em> actor as source. Adding an additional actor after the <em>FileSupplier</em> will remove the source actors from the class tree and also change the suggested actors to add next:</p>
+                      <p><img src="img/examples/actorsuggestions-context1.png" /></p>
+                      <p>After adding the <em>WekaFileReader</em> we get presented with another list of suggested actors:</p>
+                      <p><img src="img/examples/actorsuggestions-context2.png" /></p>
+                      <p>With the dataset fully configured, the <em>WekaCrossValidationEvaluator</em> actor is the next one that we want to choose from the suggestions:</p>
+                      <p><img src="img/examples/actorsuggestions-context3.png" /></p>
+                      <p>To obtain a summary of the cross-validation performed, we will add the <em>WekaEvaluationSummary</em> transformer which will generate textual output:</p>
+                      <p><img src="img/examples/actorsuggestions-context4.png" /></p>
+                      <p>And finally, we add the <em>Display</em> sink for viewing the result of the cross-validation:</p>
+                      <p><img src="img/examples/actorsuggestions-context5.png" /></p>
+                      <p>Before the flow can be executed, you still need to add a <em>CallableActors</em> standalone actor before the source actor. To this special container actor, you will add (and configure) a <em>WekaClassifierSetup</em> source. This is the source that the <em>WekaCrossValidationEvaluator</em> references.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion-user" href="#collapse-user-2">
+                Command-line execution
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-user-2" class="panel-collapse collapse">
+            <div class="panel-body">
+              <p>Though the flow editor is mainly used for designing and executing flows, you are by no means restricted to it. ADAMS was designed from the get go to be executed in a server environment, i.e., through command-line invocation. The following command-lines are using the <em>bash</em> shell. Windows users need to change <em>run</em> to <em>run.bat</em> and <em>forward slashes</em> to <em>backslashes</em>.</p>
+              <p>The class responsible to executing flows from the command-line is:</p>
+              <p><code>adams.flow.FlowRunner</code></p>
+              <p>You can use the launcher (used in the <em>run</em> and <em>run.bat</em> scripts) to execute a flow as follows:</p>
+              <p><code>./bin/run -main adams.flow.FlowRunner -file /path/to/your.flow</code></p>
+              <p>If the default memory allocation is now enough or too much, use the <em>-memory</em> option to define the <a href="http://en.wikipedia.org/wiki/Java_virtual_machine#Heap" target="_blank">heap size</a> explicitly, e.g., 256 MB:</p>
+              <p><code>./bin/run -main adams.flow.FlowRunner -memory 256m -file /path/to/your.flow</code></p>
+              <p>The following options are specific to the <code>FlowRunner</code> class:</p>
+              <ul>
+                <li><strong><code>-clean-up</code></strong> - automatically closes any windows after the flow finishes execution and returns control back to command shell</li>
+                <li><strong><code>-headless</code></strong> - suppresses all graphical output, useful in server environment/background process</li>
+              </ul>
+              <p>This command-line executes a flow that performs a 10-fold cross-validation and instead of showing the result in a Display actor, it simply outputs it in the console:</p>
+              <p><code>./bin/run -main adams.flow.FlowRunner -memory 256m -clean-up -headless -file ./flows/adams-weka-crossvalidate_classifier.flow</code></p>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion-user" href="#collapse-user-3">
+                Examples
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-user-3" class="panel-collapse collapse">
+            <div class="panel-body">
+              <p>The <a href="user_examples.html">Examples</a> section contains lots of illustrated examples, some with video.</p>
+              <p>The most important source of examples are all the example flows that ship with ADAMS. The file name consists of the module it originates from, e.g., <code>adams-weka</code> for a WEKA related flow, followed by a short description of the flow itself.</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <script>$("#footer").load("footer.html");</script>
+
+      <div id="footer-simple">
+      </div>
+      <script>$("#footer-simple").load("footer.html");</script>
     </div> <!-- /container -->
 
 
