fixed typo for snapshot import

--- a/snapshot.html
+++ b/snapshot.html
@@ -40,7 +40,7 @@
       <p>Snapshots are automatically built once a day, unless there is a test failure that needs addressing.</p>
 
       <span id="snapshotimport"></span>
-      <script>$("#snapshopimport").load("/snapshots/adams/index.html");</script>
+      <script>$("#snapshotimport").load("snapshots/adams/index.html #index");</script>
 
       <div id="footer">
       </div>
