changed footer to simple version, to make it make across devices

--- a/publications.html
+++ b/publications.html
@@ -59,9 +59,9 @@
       <p><strong>Analysing chromatographic data using data mining to monitor petroleum content in water</strong></p>
       Geoffrey Holmes, Dale Fletcher, Peter Reutemann, and Eibe Frank (2009). <em>Analysing chromatographic data using data mining to monitor petroleum content in water.</em> Proceedings of the 4th International ICSC Symposium, Thessaloniki, Greece, 2009, 278-290. [<a href="http://www.cms.waikato.ac.nz/~fracpete/publications/2009/HolmesITEE2009.pdf" target="_blank">pdf</a>]
 
-      <div id="footer">
+      <div id="footer-simple">
       </div>
-      <script>$("#footer").load("footer.html");</script>
+      <script>$("#footer-simple").load("footer.html");</script>
     </div> <!-- /container -->
 
 
