--- a/screenshots.html
+++ b/screenshots.html
@@ -130,9 +130,9 @@
         </a-->
       </div>
 
-      <div id="footer">
+      <div id="footer-simple">
       </div>
-      <script>$("#footer").load("footer.html");</script>
+      <script>$("#footer-simple").load("footer.html");</script>
     </div> <!-- /container -->
 
 
