--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         </div>
       </div>
 
-      <div id="footer">
+      <div id="footer-simple">
       </div>
-      <script>$("#footer").load("footer.html");</script>
+      <script>$("#footer-simple").load("footer.html");</script>
     </div> <!-- /container -->
 
 
