--- a/snapshot.html
+++ b/snapshot.html
@@ -42,9 +42,9 @@
       <span id="snapshotimport"></span>
       <script>$("#snapshotimport").load("snapshots/adams/index.html #index");</script>
 
-      <div id="footer">
+      <div id="footer-simple">
       </div>
-      <script>$("#footer").load("footer.html");</script>
+      <script>$("#footer-simple").load("footer.html");</script>
     </div> <!-- /container -->
 
 
