--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">ADAMS <small>- a different take on workflows</small></a>
+          <a class="navbar-brand" href="/">ADAMS</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
