--- a/dev_forum.html
+++ b/dev_forum.html
@@ -37,6 +37,8 @@
         <h1>Developer forum</h1>
       </div>
 
+      <p>If you have trouble viewing the forum below, try going to the <a href="https://groups.google.com/forum/#!forum/theadamsflow-dev" target="_blank">theadamsflow-dev</a> Google Group.</p>
+
       <iframe id="forum_embed"
         src="javascript:void(0)"
         scrolling="no"
