--- a/user_start.html
+++ b/user_start.html
@@ -29,6 +29,9 @@
 
   <body>
 
+    <span id="gaimport"></span>
+    <script>$("#gaimport").load("ga.html");</script>
+
     <span id="navbarimport"></span>
     <script>$("#navbarimport").load("navbar.html");</script>
 
